--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+New in 0.0.17
+* Removed metakit and zlib from build process.  Tarballs are still included
+  for those who's systems don't provide these packages.
+* MSVC fixes.
+* IRIX fixes.
+* Mingwin fixes.
+* Mac OS X fixes.
+* FreeBSD fixes.
+* Added support for Intel's C++ compiler under Linux.
+* Attempt to build in support for various non-compatible automake/autoconf
+  versions.
+* Fix for a problem that could lead to a bogus build for people with voodoo
+  cards.
+* Added Norman's jpegfactory code which can create jpeg format screen shots
+  of a live running application.
+* implemented set/get_log_classes and set/get_log_priority.
+* Socket library improvements.
+* Added a C++ exception abstraction.
+* Property manager fixes and improvements including node path caching
+  and debug tracing of property reads/writes.
+* Updates/fixes to xml handling.
+
 New in 0.0.16
 * July 12, 2001
 * Various changes to the property manager implimentation to better support
