--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,31 @@
+New in 0.0.18
+* April 20, 2002
+
+* Created a src/libs subdirectory for several packages that need to be
+  installed by the user but are used by many other packages and may already
+  be installed.  So we just bundle the source separately as a convenience
+  if the user needs to build and install these.
+* Upgrade to zlib-1.1.4 (security fix)
+* Upgrade to metakit-2.4.2-32.tar.gz (latest upstream release)
+* Added support for point objects in the scenery file format.
+* Additions to the binary file format to make it *much* more flexible.
+  For each major primative type: points, triangles, fans, and strips, you
+  can specify an index list of vertices, normals, colors, and texture
+  coordinates.  You can skip any of these you like to save on space.
+* Added support for new file features in the binary -> ascii scenery file
+  decoder.
+* Various code clean ups.
+* Separate XML I/O operations into a separate header file.
+* Major property manager rewrite, then lots of followup cleaning and
+  improvements.
+
+
 New in 0.0.17 (final)
 * February 16, 2002
 
 * Explicitely reset the glBlendFunc() after drawing the moon for the
   Voodoo2 linux driver since it seems to have a bug in glPopAttrib().
+
 
 New in 0.0.17pre2
 * February 13, 2002
@@ -59,6 +82,7 @@ New in 0.0.16
   ultra-hires tiled screen dumps suitable for large format printers.
   (Norman Vine)
 
+
 New in 0.0.15
 * June 20, 2001
 * Various bug fixes, tweaks, and optimizations.
@@ -87,6 +111,7 @@ New in 0.0.15
 * Fixed some critical null pointer bugs in property manager.
 * Magnetic variation can now be fetched for any arbitrary location.
 
+
 New in 0.0.14
 * December 14, 2000
 * Added a module to manage waypoints and routes, calculate bearing and
@@ -108,6 +133,7 @@ New in 0.0.14
 * MacOS tweaks.
 * FreeBSD tweaks.
 
+
 New in 0.0.13
 * September 14, 2000
 * Added support for reading and writing xml files (easyxml)
@@ -118,6 +144,7 @@ New in 0.0.13
 * MacOS tweaks.
 * MSVC tweaks.
 
+
 New in 0.0.12
 * July 19, 2000
 * Converted project license from GPL to LGPL.
@@ -127,6 +154,7 @@ New in 0.0.12
 * Added a property manager (registry)
 * Some documentation added.
 
+
 New in 0.0.11
 * July 3, 2000
 * Replaced gdbm with metakit
@@ -134,6 +162,7 @@ New in 0.0.11
 * Added spherical course and dist given two points calculations
 * MSVC5 fixes
 * Math/bucket/tiling tweaks from Norman Vine
+
 
 New in 0.0.7
 * March 29, 2000
@@ -147,18 +176,22 @@ New in 0.0.7
 * Optimizations and bullet proofing of magnetic variation code by Norman 
   Vine and Ed Williams
 
+
 New in 0.0.6
 * March 27, 2000
 * Added Nima World Magnetic Model 2000 contributed by Ed Williams
 * Fixes for MSVC++
 
+
 New in 0.0.5
 * March 17, 2000
 * Restructured directory layout to facilitate windows/mac IDE builds.
 
+
 New in 0.0.4
 * Removed mat3.h and friends (we now use plib's sg lib for these sorts of 
   things.)
+
 
 New in 0.0.3
 * Release that conincides with FlightGear-0.7.2
