--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+New in 0.3.1
+* December 4, 2002
+
+* Fix a major packaging blunder with several missing files.
+
+
 New in 0.3.0
 * December 3, 2002
 
