--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+New in 0.3.5
+* March 16, 2004
+
+* Added Andy's nasal interpreter for small built in scripting tasks.
+  Nasal integrates nicely with FlightGear's property system.
+* Added new (much simpler) metar parsing code.
+* Support VASI/PAPI lights correctly.
+* Fixes to cloud animation.
+* Updates to sky dome coloring as well as sun/moon coloring.
+* Vary environment lighting with visibility (subtlely.)
+* Support control of alpha test in model animation.
+* Complete rewrite of the event manager.
+* Updates to low level socket code to make it more flexible.
+* Win32 serial port communication fixes.
+* sg_geodesy rewritten to be more accurate and robust and symmetric.
+
+
 New in 0.3.4
 * October 22, 2003
 
