--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+New in 0.3.6-pre1
+* Better MinGW support
+* Switched audio system from plib's "sl/sm" to OpenAL.
+* Add support for scaling an object based on distance.  The scaling
+  factor is determined by a lookup table based on distance.
+* Add a "flash" animation type.
+* Fix cloud positioning/animation bugs.
+
+
 New in 0.3.5
 * March 26, 2004
 
