My old email address is no longer valid ... point to my web page.

--- a/Thanks
+++ b/Thanks
@@ -90,7 +90,7 @@ David Megginson <david@megginson.com>
   SimGear property manager/registry
 
 
-Curt Olson <curt@flightgear.org>
+Curt Olson http://www.flightgear.org/~curt/
   Curt is responsible for overall project and source code management.
   He has his hands in many of the areas.
 
@@ -175,7 +175,7 @@ NOTE:
 ----
 
 THIS DOCUMENT WAS INITIALLY WRITTEN BY 
-Curt L. Olson  <curt@flightgear.org>
+Curt L. Olson  <http://www.flightgear.org/~curt>
 
 
 05 Jul 2000 Removed non-SimGear entries (CLO)
