--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,8 @@ New in 0.3.9-pre2
   features, fixes parser bugs, fixes several internal bugs.
 * Our 3d cockpit jitter problem is fixed (woohoo!)
 * Add code to support rendering to a texture.
+* Allow "tip" popups to pop themselves down after the appropriate
+  timeout, even if the sim time is paused.
 * Various low model level animation fixes and additions ... color,
   transparency, 'chrome' effects, randomized spin, etc.
 * Create our own portable stdint.h implementation.
