--- a/Thanks
+++ b/Thanks
@@ -106,6 +106,11 @@ David Megginson <david@megginson.com>
   SimGear property manager/registry
 
 
+Tim Moore
+  Ported the (chrome) "shader" animation to OSG, and helped with porting
+  the "material" animation.
+
+
 Curt Olson http://www.flightgear.org/~curt/
   Curt is responsible for overall project and source code management.
   He has his hands in many of the areas.
