Attempt to sort out the version number mess in preparation for a 1.9.0 release.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
-Version 1.99.5
-* October 30, 2008 (sourcecode snapshot release)
+Version 1.9.0
+* Thu Dec 18 15:12:15 CST 2008
+
+
+Version 1.8.6
+* Mon Dec  1 14:02:47 CST 2008
+
+
+Version 1.8.5
+* October 30, 2008 (source code snapshot release)
 
 
 New in 0.3.10
